fixed text alignment, working on fixing background, modifying colors

--- a/style.css
+++ b/style.css
@@ -1,19 +1,20 @@
 body {
+  padding-top: 0;
+  margin-top: 0;
   background-color: #091612;
   background-image: url("/images/holiday\ background.png");
-  background-repeat: no-repeat;
+  /* background-repeat: no-repeat; */
   background-attachment: fixed;
   background-size: 100%;
-
+  /* 
   min-width: 100%;
-  min-height: 100%;
+  min-height: 100%; */
   height: 100vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 0;
   font-family: "Sofia", sans-serif;
 }
 
@@ -22,10 +23,8 @@ header {
   color: #317c69;
   display: flex;
 
-  align-items: center;
-  justify-content: space-evenly;
-
-  /* justify-content: center; */
+  text-align: center;
+  margin: 0;
   padding-bottom: 100px;
   font-size: 15px;
 }
